<resources>
    <string name="app_name">Fyndit</string>
    <string name="welcome">Choose an activity!</string>
    <string name="rec">Recreation</string>
    <string name="shopping">Shopping</string>
    <string name="cafe">Cafe</string>
    <string name="sports">Sports Fields</string>
    <string name="park">Parks</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="info">Visit</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="aboutUs">
        Lorem ipsum dolor sit amet, volutpat arcu, libero lobortis. Feugiat augue, odio eget, dolor
        vestibulum. Dolor luctus, vitae libero libero. Pede nulla nulla, lectus sit. Molestie wisi, sapien fusce eget.
        Nulla tellus.\n\n
        Pellentesque vestibulum augue, ut amet dolor. Id mauris. Dui ligula, urna facilisis non. Nec eu penatibus, nulla
        hendrerit a. Leo auctor velit, condimentum justo, tempor ac.\n\n
        Diam mauris amet, quam non. Et leo, nibh cursus. Ullam lectus. Ut aenean. Quam leo, libero cursus, mollis odio.
    </string>
    <string name="authors">Bryan Brotonel\nGagan Bahugun\nJeremy Wildsmith</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shareTitle">Fyndit with your friends!</string>
</resources>
