<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.fyndit.CategoryActivity">


    <android.support.v7.widget.CardView
        android:layout_width="344dp"
        android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="8dp">
        <RelativeLayout
            android:layout_width="344dp"
            android:layout_height="495dp" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/title"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/description"
                android:textColor="#666"
                android:textSize="14dp" android:id="@+id/textView"/>

            <Button
                android:text="@string/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:layout_marginBottom="14dp"
                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
                android:layout_marginStart="11dp"/>

            <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignBottom="@+id/info"
                android:layout_toEndOf="@+id/info" android:layout_marginStart="20dp" android:id="@+id/share"/>
            <Button
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignTop="@+id/share"
                android:layout_alignParentEnd="true" android:layout_marginEnd="16dp" android:id="@+id/search"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
