<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.fyndit.AboutActivity">

    <TextView
        android:id="@+id/aboutTitle"
        android:text="@string/about"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:layout_alignParentTop="true"/>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
        android:layout_below="@+id/aboutTitle" android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:padding="15dp"
                android:id="@+id/aboutParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUs"
                android:textSize="16sp"
                android:textColor="@color/descriptionTextColor"
                android:gravity="center"/>

            <TextView
                android:id="@+id/authors"
                android:text="@string/authors"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center|bottom"
                android:layout_below="@+id/aboutParagraph"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
