<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="344dp"
            android:layout_height="495dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>

            <TextView
                android:id="@+id/title"
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:maxLines="3"
                android:padding="8dp"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/description"
                android:textColor="#666"
                android:textSize="14dp" android:id="@+id/textView"/>

            <Button
                android:id="@+id/info"
                android:text="@string/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginStart="34dp" android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/share"
                android:src="@drawable/ic_share_white_48dp"
                app:fabSize="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchorGravity="bottom|right|end"
                android:layout_marginEnd="15dp"
                android:layout_alignBottom="@+id/info"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
